--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "web3rsvp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-     "script": "node scripts/run.js"
+    "deploy": "npx hardhat run scripts/deploy.js --network mumbai",
+    "script": "node scripts/run.js",
+    "test": "npx hardhat test --trace",
+    "compile": "npx hardhat compile"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/buidler": "^1.4.8",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.5",
     "hardhat": "^2.12.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "hardhat-tracer": "^1.1.0-rc.3"
   }
 }
