--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hardhat": "^2.12.2"
   },
   "dependencies": {
+    "@protofire/subgraph-toolkit": "^0.1.2",
     "dotenv": "^16.0.1",
     "hardhat-tracer": "^1.1.0-rc.3"
   }
